--- a/m1/w1/d2/index.html
+++ b/m1/w1/d2/index.html
@@ -133,7 +133,7 @@
 
         <br>
     </section>    
-    <div>
+    <div id="piepagina">
         <aside>(copyright e info)</aside>
         <aside>Blog Epicode 2021</aside>
         <address>
