--- a/m1/w1/d3/Es 30-03/start/curriculum.html
+++ b/m1/w1/d3/Es 30-03/start/curriculum.html
@@ -9,7 +9,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">  
-        <link rel="stylesheet" href="assets/css/stile.css">     
+        <link rel="stylesheet" href="assets/css/reset.css">  
+        <link rel="stylesheet" href="assets/css/stile.css">  
+          
     </head>
     <body>
         <header>
