--- a/m1/w1/d2/index.html
+++ b/m1/w1/d2/index.html
@@ -28,7 +28,7 @@
         <hr>
 
         <main>
-            <article>
+            <article> <!--qui iniziano gli articoli-->
                 <h2>Come creare un template per i post</h2>
                 <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine.</p>
                 <p>Le varie aree saranno quindi suddivise in:</p>
@@ -52,7 +52,7 @@
 
             <br>
 
-        <table cellpadding="2" cellspacing="2" border="1">
+        <table cellpadding="2" cellspacing="2" border="1"> <!--tabella spazio 1 e bordo 2-->
             <thead>
                 <caption>Diffusione dei CSS</caption>
                 <tr>
@@ -133,16 +133,14 @@
 
         <br>
     </section>    
-    <div id="piepagina">
+    <footer>
         <aside>(copyright e info)</aside>
         <aside>Blog Epicode 2021</aside>
         <address>
             <p>Testata online di Mario Rossi, registrata con prot.n.213/2018 - Milano. P.IVA 00112233.</p>
             <a href="">info@epicode.school</a>
         </address>
-    </div>
-
-
+    </footer>
 
 </body>
 </html>
