--- a/m1/w1/d5progetto/start-20220401T085759Z-001/start/assets/index.html
+++ b/m1/w1/d5progetto/start-20220401T085759Z-001/start/assets/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi." content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/stile.css">
