--- a/m1/w2/d2/start/articolo.html
+++ b/m1/w2/d2/start/articolo.html
@@ -31,9 +31,9 @@
 
         <main>
             <article>
-                <i id="plus"class="far fa-plus-square"></i>
-                <i id="caret"class="far fa-caret-square-up"></i>
-                <i id="calendar"class="far fa-calendar-alt"></i>
+                <a href="https://it-it.facebook.com/"><i id="plus"class="far fa-plus-square"></i></a>
+                <a href="https://icalendario.it/"><i id="calendar"class="far fa-calendar-alt"></i></a>
+                <a href="#"><i id="caret"class="far fa-caret-square-up"></i></a>
 
 
                 <h1>Come creare un template per i post</h1>
