--- a/m1/w2/d4/start2/frase.html
+++ b/m1/w2/d4/start2/frase.html
@@ -13,16 +13,16 @@
     <body>
 		<main>
 			<div id="testoAlternato">
-				<p>
+				<p class="frase">
 					Realizziamo con cura, passione
 					<br>
 					attenzione, meticolosità, precisione
 					<br>
 					ed un pizzico di originalità
 					<span class="parole">
-						<i>interfacce web</i>
-						<i>single page app</i>
-						<i>app native</i>
+						<i id="interf"class="base">interfacce web</i>
+						<i id="single"class="base">single page app</i>
+						<i id="app" class="base">app native</i>
 					</span>
 				</p>
 			</div>
