--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fontawesome.com/">
 </head>
 
 <body>
@@ -46,7 +47,7 @@
       <i></i>
       <h3>Tutti ti cercheranno</h3>
       <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
-      <i></i>
+      <i class="lni lni-map-marker"></i>
       <h3>Potrai lavorare da dove vuoi</h3>
       <p>non serve lavorare in ufficio per essere creatori di prodotti digitali, e le aziende lo sanno. Lavora da casa, in riva al mare o in montagna.</p>
       <i></i>
@@ -62,13 +63,13 @@
       <img src="/start/assets/images/notebook.jpg" alt="">
     </div>
     <div class="central">
-      <i></i>
+      <i class="lni lni-happy"></i>
       <h3>Chi sarai</h3>
       <p>il creatore delle app che usi tutti i giorni</p>
-      <i></i>
+      <i class="lni lni-cool"></i>
       <h3>Chi diventerai</h3>
       <p>Lo specialista padrone del suo tempo e spazio</p>
-      <i></i>
+      <i class="lni lni-speechless"></i>
       <h3>Chi non sarai</h3>
       <p>Il nerd incollato allo schermo</p>
     </div>
@@ -80,18 +81,18 @@
     </div>
     <div>
       <h3>Ti piace ciò che vedi?<br>Condividilo con i tuoi amici!</h3>
-      <i></i><i></i><i></i>
+      <i class="lni lni-facebook-original"></i><i class="lni lni-linkedin-original"></i><i class="lni lni-instagram-filled"></i>
     </div>
     <br>
     <div>
       <h3>Iscriviti alla nostra newsletter</h3>
       <form action="backend.php" method="get">
-        <input name="email" type="email" placeholder="la tua email"><br><button>Va bene!</button>
+        <input name="email" type="email" placeholder="la tua email"><button>Va bene!</button>
     </form>
     </div>
-    <p><i></i>2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
+    <p><i class="fa-solid fa-copyright"></i>2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
   </footer>
-      
+
 
 
 
