--- a/m1/w2/d5/start/chi-siamo.html
+++ b/m1/w2/d5/start/chi-siamo.html
@@ -16,9 +16,10 @@
   <title>Chi siamo</title>  
 </head>
 
-<body class="contatti">
+<body id="chi-siamo">
   <h1>We are coder</h1>
   <p>Epicode School nasce con l'obbiettivo di rivoluzionare la formazione in ambito tech. Vogliamo essere il movimento dei creatori digitali che il mercato richiede: formiamo, forniamo e aggiorniamo specialisti con la missione di trasformare le aziende dall'interno e offrire ai giovani sicure prospettive di carriera. Siamo a Roma ma arriviamo in tuttta Italia, per creare la community che rivoluzionerà il mondo del lavoro.</p>
+  <div class="contatti-chi">
   <div class="container-chi">
     <img class="imagine" src="/start/assets/images/foto1.jpg" alt="foto1">
     <p>Investiamo sul talento e vogliamo dimostrartelo: effettua un colloquio di selezione per accedere a una delle 5 borse di studio disponibili.</p>
@@ -27,43 +28,44 @@
     <img class="imagine" src="/start/assets/images/foto2.jpg" alt="foto2">
     <p>Riceverai subito l'esito, quindi ti consigliamo di contattarci prima che le borse di studio si esauriscano: contattaci e candidati subito.</p>
   </div>
+</div>
   <h2>Prezzi dei corsi</h2>
   <div>
     <table>
       <tr>
-        <td class="tab-bold">Base 500</td>
+        <td class="tab-bold">Base 500<i class="lni lni-euro"></i></td>
         <td>30 ore di formazione</td>
       </tr>
       <tr>
-        <td class="tab-bold">Intermedio 1000</td>
+        <td class="tab-bold">Intermedio 1000<i class="lni lni-euro"></i></td>
         <td>Tutte le caratteristiche del corso base</td>
       </tr> 
       <tr>
-        <td class="tab-bold">Avanzato 2000</td>
+        <td class="tab-bold">Avanzato 2000<i class="lni lni-euro"></i></td>
         <td>Tutte le caratteristiche del corso intermedio</td>
       </tr>
       <tr>
-        <td class="tab-bold">Base 500</td>
+        <td class="tab-bold">Base 500<i class="lni lni-euro"></i></td>
         <td>Supporto post corso</td>
       </tr>
       <tr>
-        <td class="tab-bold">Intermedio 1000</td>
+        <td class="tab-bold">Intermedio 1000<i class="lni lni-euro"></i></td>
         <td>Rateazione in 12 mesi</td>
       </tr> 
       <tr>
-        <td class="tab-bold">Avanzato 2000</td>
+        <td class="tab-bold">Avanzato 2000<i class="lni lni-euro"></i></td>
         <td>Video registrazioni</td>
       </tr>
       <tr>
-        <td class="tab-bold">Base 500</td>
+        <td class="tab-bold">Base 500<i class="lni lni-euro"></i></td>
         <td>Stage aziendale</td>
       </tr>
       <tr>
-        <td class="tab-bold">Intermedio 1000</td>
+        <td class="tab-bold">Intermedio 1000<i class="lni lni-euro"></i></td>
         <td>Ripetizione del corso</td>
       </tr> 
       <tr>
-        <td class="tab-bold">Avanzato 2000</td>
+        <td class="tab-bold">Avanzato 2000<i class="lni lni-euro"></i></td>
         <td>Supporto 24h dedicato</td>
       </tr>
     </table>
