--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -43,22 +43,30 @@
       <h2>Perchè diventare un Developer?</h2>
       <p>Non servono laure e competenze specifiche, solo impegno. Segui il corso online, dove vuoi tu. Il lavoro che andrai a fare è veramente figo.</p>
     </div>
-    <div class="central">
+    <div class="central2">
+      <div class="dir-row">
       <i></i>
       <h3>Tutti ti cercheranno</h3>
       <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
+      </div>
+      <div class="dir-row">
       <i class="lni lni-map-marker"></i>
       <h3>Potrai lavorare da dove vuoi</h3>
       <p>non serve lavorare in ufficio per essere creatori di prodotti digitali, e le aziende lo sanno. Lavora da casa, in riva al mare o in montagna.</p>
+      </div>
+      <div class="dir-row">
       <i></i>
       <h3>Azienda, Freelance o Startup</h3>
       <p>Scegli più facilmente la carriera e il rapporto di lavoro che ti piace di più, in qualsiasi momento.</p>
     </div>
+    </div>
+
     <div class=" central container-blu">
       <h2>Ma chi è il Developer oggi?</h2>
       <p>Se non lo sai te lo diciamo noi: il futuro è dei developer</p>
       <a class="blu-button" href="contatti.html">Scrivici!</a>
     </div>
+    <div class="notebuk">
     <div class="notebook">
       <img src="/start/assets/images/notebook.jpg" alt="">
     </div>
@@ -73,6 +81,7 @@
       <h3>Chi non sarai</h3>
       <p>Il nerd incollato allo schermo</p>
     </div>
+  </div>
   </main>
   <footer>
     <div>
@@ -90,8 +99,8 @@
         <input name="email" type="email" placeholder="la tua email"><button>Va bene!</button>
     </form>
     </div>
-    <p><i class="fa-solid fa-copyright"></i>2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
   </footer>
+  <p><i class="fa-solid fa-copyright"></i>2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
 
 
 
