--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -7,14 +7,13 @@
   <meta name="Epicode School: il punto di partenza per la tua professione di Developer." content="">
   <title>Epicode - Formazione Web Developer</title> 
   <link rel="stylesheet" href="/start/assets/css/reset.css">
-  <link rel="stylesheet" href="/start/assets/css/stile.css"> 
   <link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fontawesome.com/">
+  <link rel="stylesheet" href="/start/assets/css/stile.css"> 
 </head>
 
 <body>
@@ -45,7 +44,7 @@
     </div>
     <div class="central2">
       <div class="dir-row">
-      <i></i>
+        <i class="lni lni-comments"></i>
       <h3>Tutti ti cercheranno</h3>
       <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
       </div>
@@ -55,7 +54,7 @@
       <p>non serve lavorare in ufficio per essere creatori di prodotti digitali, e le aziende lo sanno. Lavora da casa, in riva al mare o in montagna.</p>
       </div>
       <div class="dir-row">
-      <i></i>
+        <i class="lni lni-consulting"></i>
       <h3>Azienda, Freelance o Startup</h3>
       <p>Scegli più facilmente la carriera e il rapporto di lavoro che ti piace di più, in qualsiasi momento.</p>
     </div>
@@ -100,7 +99,7 @@
     </form>
     </div>
   </footer>
-  <p><i class="fa-solid fa-copyright"></i>2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
+  <p>©2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
 
 
 
