--- a/m1/w2/d5/start/contatti.html
+++ b/m1/w2/d5/start/contatti.html
@@ -18,19 +18,21 @@
 
 <body>
   <h1 class="contatti">Contatti</h1>
+  <main class="main-contatti">
   <form action="backend.php" method="get">
     <input type="Nome-cognome" placeholder="Nome e cognome"><br>
     <input type="email" placeholder="Indirizzo valido nome@casell.com"><br>
     <input type="text" placeholder="Scrivi in breve il tuo messaggio"><br>
     <button>Invia il messaggio</button>
   </form>
+  <div>
   <h2 class="contatti">Sede formativa</h2>
   <p class="contatti">Via Appia 1<br>00100 Roma (RM)</p>
   <p class="contatti">info@epicode.school<br>+39 0612345956</p>
   <h2 class="contatti">Lavora con noi</h2>
   <p class="contatti">Per poterti candidare ad un ruolo da docente invia il tuo cv a job@epicode.school</p>
-
-
+  </div>
+</main>
 
 </body>
 
