--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -27,7 +27,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="chi-siamo.html">Chi siamo</a></li>
           <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#">Registrati</a></li>
+          <li><a class="blu-button" href="#">Registrati</a></li>
         </ul>
       </div>  
     </nav>
@@ -36,7 +36,7 @@
     <div class="container1">
       <h1>Diventa un developer EPICO</h1>
       <p>Diventa un developer epico e ti troviamo noi il lavoro. Scommettiamo su di te: paghi metà corso, l'altra metà solo quando inizi a lavorare.</p>
-      <a class="blu-button" href="">chiedi info</a>
+      <a id="info" class="blu-button" href="">chiedi info</a>
     </div>
     <div class="central">
       <h2>Perchè diventare un Developer?</h2>
