--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -51,7 +51,7 @@
       <div class="dir-row">
       <i class="lni lni-map-marker"></i>
       <h3>Potrai lavorare da dove vuoi</h3>
-      <p>non serve lavorare in ufficio per essere creatori di prodotti digitali, e le aziende lo sanno. Lavora da casa, in riva al mare o in montagna.</p>
+      <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali, e le aziende lo sanno. Lavora da casa, in riva al mare o in montagna.</p>
       </div>
       <div class="dir-row">
         <i class="lni lni-consulting"></i>
