--- a/m1/w2/d5/start/chi-siamo.html
+++ b/m1/w2/d5/start/chi-siamo.html
@@ -31,7 +31,7 @@
 </div>
   <h2>Prezzi dei corsi</h2>
   <div>
-    <table>
+    <table id="table-mobile">
       <tr>
         <td class="tab-bold">Base 500<i class="lni lni-euro"></i></td>
         <td>30 ore di formazione</td>
@@ -66,6 +66,30 @@
       </tr> 
       <tr>
         <td class="tab-bold">Avanzato 2000<i class="lni lni-euro"></i></td>
+        <td>Supporto 24h dedicato</td>
+      </tr>
+    </table>
+  </div>
+  <div id="table-div">
+    <table id="table-desktop">
+      <thead>
+        <th class="tab-bold">Base 500<i class="lni lni-euro"></i></th>
+        <th class="tab-bold">Intermedio 1000<i class="lni lni-euro"></i></th>
+        <th class="tab-bold">Avanzato 2000<i class="lni lni-euro"></i></th>
+      </thead>
+      <tr>
+        <td>30 ore di formazione</td>
+        <td>Tutte le caratteristiche del corso base</td>
+        <td>Tutte le caratteristiche del corso intermedio</td>
+      </tr>
+      <tr>
+        <td>Supporto post corso</td>
+        <td>Rateazione in 12 mesi</td>
+        <td>Video registrazioni</td>
+      </tr> 
+      <tr>
+        <td>Stage aziendale</td>
+        <td>Ripetizione del corso</td>
         <td>Supporto 24h dedicato</td>
       </tr>
     </table>
