--- a/m2/w2/d2/index.html
+++ b/m2/w2/d2/index.html
@@ -41,10 +41,10 @@
         </div>
       </div>
 
-      <div class="row-8 bg-success text-center container fs-5 fw-light text-light p-0">
+      <div class="row-8 bg-success text-center container fs-5 fw-light text-light p-3">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat veniam nesciunt enim, amet voluptatem porro corporis similique qui repudiandae voluptates nihil. Sequi maxime ad culpa ipsam, repudiandae rem quam!</p>
       </div>
-    <div class="card-group">
+    <div class="card-group mt-5">
         <div class="card ">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
