--- a/m2/w2/d2/index.html
+++ b/m2/w2/d2/index.html
@@ -32,7 +32,7 @@
           <div class="col-md-8 border-0">
             <div class="card-body border-0 ">
               <h5 class="card-title h1">Con passione creiamo valore!</h5>
-              <p class="card-text fs-4">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text fs-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus repellat vitae totam quae? Pariatur, reprehenderit accusantium. Magni nemo a autem sed, officia quidem quaerat dolores illo animi repellendus itaque error.</p>
               <a href="#" class="btn btn-primary">
                 I nostri risultati
               </a>
@@ -42,7 +42,7 @@
       </div>
 
       <div class="row-8 bg-success text-center container fs-5 fw-light text-light p-3">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat veniam nesciunt enim, amet voluptatem porro corporis similique qui repudiandae voluptates nihil. Sequi maxime ad culpa ipsam, repudiandae rem quam!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat veniam nesciunt enim, amet voluptatem porro corporis similique qui repudiandae voluptates nihil. Sequi maxime ad culpa ipsam, repudiandae rem quam! lo</p>
       </div>
     <div class="card-group mt-5">
         <div class="card ">
