--- a/m2/w2/d5/index.html
+++ b/m2/w2/d5/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="">
     <header class=" justify-content-center py-3 border-bottom sticky-top">
         <div class="row">
             <!-- <div class="col-2"></div> -->
@@ -34,15 +34,15 @@
       <main class="">
           <div class="row">
               <!-- <div class="col-2"></div> -->
-              <h1 class="col-8 offset-2">La nostra passione si erge sopra ogni cosa</h1>
+              <h1 class="col-md-10 offset-2">La nostra passione si erge sopra ogni cosa</h1>
           </div>
         <div class="row">
             <!-- <div class="col-2"></div> -->
-          <p class="fs-2 col-9 offset-2 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error facilis et, quisquam ab aperiam nobis molestiae officia tempore commodi mollitia repellat rem. Animi optio laboriosam harum id placeat eum ratione.</p>
+          <p class="fs-5 col-9 offset-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error facilis et, quisquam ab aperiam nobis molestiae officia tempore commodi mollitia repellat rem. Animi optio laboriosam harum id placeat eum ratione.</p>
         </div>
         <div class="row">
             <!-- <div class="col-2"></div> -->
-          <button type="button" class="btn btn-primary btn-lg col-2 offset-2 ">Iscriviti alla lista contatti</button>
+          <button type="button" class="btn btn-primary btn-lg col-2 offset-2">Iscriviti alla lista contatti</button>
         </div>
 
       </main>
@@ -131,7 +131,15 @@
                 </ul>
               </div></div>
             <div class="col-md-3 mt-3 es5-ann"><div class="col text-center">
-                <h5 class="text-light">Contatti</h5>
+                <h5 class="text-light">Mission & Vision</h5>
+                <ul class="nav flex-column">
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
+                </ul>
+              </div></div>
+            <div class="col-md-3 mt-3 es5-ann"><div class="col text-center">
+                <h5 class="text-light">Dove siamo</h5>
                 <ul class="nav flex-column">
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
@@ -146,15 +154,7 @@
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
                 </ul>
               </div></div>
-            <div class="col-md-3 mt-3 es5-ann"><div class="col text-center">
-                <h5 class="text-light">Contatti</h5>
-                <ul class="nav flex-column">
-                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
-                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
-                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Lorem ipsum</a></li>
-                </ul>
-              </div></div>
-    <p class="text-center text-light">© 2021 Company, Inc</p>
+    <p class="text-center text-light">© Alessio per Epicode School</p>
 </footer>
     
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
