--- a/m2/w2/d5/index.html
+++ b/m2/w2/d5/index.html
@@ -92,21 +92,21 @@
               <h5><i class="bi bi-chat-right-quote"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel aperiam, optio voluptate quae labore amet dolore assumenda?</h5>
             <img src="img/reviews/reviews-1.jpg" class="" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <p>Samantha Loret</p>
+              <p class="fw-bold">Samantha Loret</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
               <h5><i class="bi bi-chat-right-quote"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel aperiam, optio voluptate quae labore amet dolore assumenda?</h5>
             <img src="img/reviews/reviews-2.jpg" class="" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <p>Jennifer Mackinley</p>
+              <p class="fw-bold">Jennifer Mackinley</p>
             </div>
           </div>
           <div class="carousel-item">
               <h5><i class="bi bi-chat-right-quote"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel aperiam, optio voluptate quae labore amet dolore assumenda?</h5>
             <img src="img/reviews/reviews-3.jpg" class="" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <p>Ronald Macdonald</p>
+              <p class="fw-bold">Ronald Macdonald</p>
             </div>
           </div>
         </div>
