--- a/m2/w3/d5/index.html
+++ b/m2/w3/d5/index.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Tabella da file JSON</title>
 </head>
 <body>
     
-    <h1>Tabella utenti</h1>
-
     
-    <table id="tabUsers">
+        <table class="container">
+            <thead>
+                <tr class="row p-3 pb-0 text-center">
+                    <th class="col bg-success">Username</th>
+                    <th class="col bg-primary">First name</th>
+                    <th class="col bg-success">Last name</th>
+                    <th class="col bg-primary">Gender</th>
+                    <th class="col bg-success">Profile pic</th>
+                    <th class="col bg-primary">E-mail</th>
+                </tr>
+            </thead>
+            <tbody id="tabUsers">
 
-    </table>
-
+            </tbody>
+        </table>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
